# sherpa-ncnn

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  MANIFEST.in  README.md  a.ipynb  build-aarch64-linux-gnu.sh  build-android-arm64-v8a-with-vulkan.sh  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh  build-android-x86-64.sh  build-android-x86.sh  build-apk.sh  build-arm-linux-gnueabihf.sh  build-ios.sh  build-m3axpi.sh  build-riscv64-linux-gnu.sh  build-swift-macos.sh  build-wasm-simd-for-nodejs.sh  build-wasm-simd.sh  install-vulkan-macos.md  new-release.sh  pack-for-embedded-systems.sh  release.sh  setup.py
.github/scripts/: Main.kt  Makefile  SherpaNcnn.kt  WaveReader.kt  build-apk.sh  note.md  run-test.sh  swift-api-test.sh  test-jni.sh  test-recognizer.py  test-vad.sh
.github/workflows/: aarch64-linux-gnu.yaml  android.yaml  apk.yaml  arm-linux-gnueabihf.yaml  build-wasm-simd.yaml  build-wheels-aarch64.yaml  build-wheels-armv7l.yaml  build-wheels-core.yaml  build-wheels-linux-windows.yaml  build-wheels-linux.yaml  build-wheels-macos-arm64.yaml  build-wheels-macos-x64.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  build-wheels.yaml  build.yaml  csharp-api-test.yaml  dot-net-linux.yaml  dot-net-macos.yaml  dot-net-widows-x64.yaml  dot-net-windows-x64.yaml  dot-net.yaml  export-piper.yaml  export-sense-voice.yaml  go.yaml  jni.yaml  linux-macos-windows.yaml  linux.yaml  macos.yaml  mfc.yaml  nodejs.yaml  npm.yaml  publish-to-pypi.yaml  publish_to_pypi.yml  release-go.yaml  run-greedy-search-test.yaml  swift-api-test.yaml  test-dot-net.yaml  test-pip-install.yaml  (+4 more)
android/: .gitignore
android/SherpaJavaNCNN/: README.md  build.gradle  settings.gradle
android/SherpaNcnn/: .gitignore  settings.gradle
android/SherpaNcnnWearOS/: settings.gradle.kts
c-api-examples/: CMakeLists.txt  decode-file-c-api.c
cmake/: cmake_extension.py  googletest.cmake  json.cmake  kaldi-native-fbank.cmake  kaldifst.cmake  ncnn.cmake  openfst.cmake  portaudio.cmake  pybind11.cmake  sherpa-ncnn.pc.in  show-info.cmake  tiny-alsa.cmake
csharp-api-examples/: DecodeFile.cs  README.md  WaveReader.cs
dotnet-examples/: sherpa-ncnn.sln
dotnet-examples/decode-file/: DecodeFile.cs  WaveReader.cs  decode-file.csproj  run.sh
dotnet-examples/microphone/: Program.cs  microphone.csproj  run.sh
ffmpeg-examples/: CMakeLists.txt  Makefile  README.md  run.sh  sherpa-ncnn-ffmpeg.c  sherpa-ncnn-ffmpeg.cc
go-api-examples/decode-file/: go.mod  go.sum  main.go  run.sh
go-api-examples/real-time-speech-recognition-from-microphone/: go.mod  go.sum  main.go  run.sh
ios-swift/SherpaNcnn/: .gitignore
kotlin-api-examples/: FeatureConfig.kt  OfflineRecognizer.kt  OfflineStream.kt  WaveReader.kt  faked-log.kt  run-offline-sense-voice-asr.sh  test_offline_sense_voice_asr.kt
mfc-examples/: mfc-examples.sln
mfc-examples/RealtimeSpeechRecognition/: RealtimeSpeechRecognition.cpp  RealtimeSpeechRecognition.h  RealtimeSpeechRecognition.rc  RealtimeSpeechRecognition.vcxproj  RealtimeSpeechRecognition.vcxproj.filters  RealtimeSpeechRecognitionDlg.cpp  RealtimeSpeechRecognitionDlg.h  Resource.h  sherpa-ncnn-deps.props
nodejs-examples/: .gitignore  README.md  decode-file.js  hotwords-decode-file.js  index.js  package-lock.json  package.json  real-time-speech-recognition-microphone-advanced-display.js  real-time-speech-recognition-microphone.js  run.sh  test.js
nodejs-wasm-examples/: decode-file.js  real-time-speech-recognition-microphone.js
python-api-examples/: AudioSer.py  README.md  decode-file.py  offline-decode-file-sense-voice.py  speech-recognition-from-microphone-with-endpoint-detection-alsa.py  speech-recognition-from-microphone-with-endpoint-detection.py  speech-recognition-from-microphone.py  tts-piper-chinese-single-speaker.py  tts-piper-english-multi-speakers.py  tts-piper-english-single-speaker.py
python-api-examples/AudioSer/: AudioSer.py  README.md  config.py  requirements.txt
runtime/ios/sherpa-ncnn/csrc/: CMakeLists.txt  decode.cc  decode.h  features.cc  features.h  lstm-model.cc  lstm-model.h  symbol-table.cc  symbol-table.h
scripts/: check_style_cpplint.sh
sherpa-ncnn/: CMakeLists.txt
sherpa-ncnn/c-api/: CMakeLists.txt  c-api.cc  c-api.h
sherpa-ncnn/csrc/: CMakeLists.txt  CPPLINT.cfg  alsa.cc  alsa.h  circular-buffer.cc  circular-buffer.h  context-graph.cc  context-graph.h  conv-emformer-model.cc  conv-emformer-model.h  decode.cc  decode.h  decoder.cc  decoder.h  display.h  endpoint.cc  endpoint.h  features.cc  features.h  file-utils.cc  file-utils.h  generate-int8-scale-table.cc  greedy-search-decoder.cc  greedy-search-decoder.h  hypothesis.cc  hypothesis.h  lexicon.cc  lexicon.h  lstm-model.cc  lstm-model.h  macros.h  math.cc  math.h  meta-data.cc  meta-data.h  microphone.cc  microphone.h  model.cc  model.h  modified-beam-search-decoder.cc  (+81 more)
sherpa-ncnn/jni/: CMakeLists.txt  common.cc  common.h  jni.cc  offline-recognizer.cc  offline-stream.cc  wave-reader.cc
sherpa-ncnn/python/csrc/: CMakeLists.txt  alsa.cc  alsa.h  decode.cc  decode.h  decoder.cc  decoder.h  display.cc  display.h  endpoint.cc  endpoint.h  faked-alsa.cc  features.cc  features.h  mat-util.cc  mat-util.h  model.cc  model.h  offline-model-config.cc  offline-model-config.h  offline-recognizer.cc  offline-recognizer.h  offline-sense-voice-model-config.cc  offline-sense-voice-model-config.h  offline-stream.cc  offline-stream.h  offline-tts-model-config.cc  offline-tts-model-config.h  offline-tts-vits-model-config.cc  offline-tts-vits-model-config.h  offline-tts.cc  offline-tts.h  recognizer.cc  recognizer.h  sherpa-ncnn.cc  sherpa-ncnn.h  stream.cc  stream.h
swift-api-examples/: .gitignore  SherpaNcnn-Bridging-Header.h  SherpaNcnn.swift  decode-file.swift  run-decode-file.sh
toolchains/: README.md  ios.toolchain.cmake  riscv64-linux-gnu.toolchain.cmake
unity-example/: readme.txt  sherpa-ncnn.unitypackage  sherpa-ncnn_v1.0.unitypackage
wasm/: CMakeLists.txt  app.js  index.html  sherpa-ncnn-wasm-main.cc  sherpa-ncnn.js
wasm/assets/: .gitignore  README.md
(+142 files in other folders)
